feat: integrate user data analysis api
